RouteLogic-v4.0.0/force-app/main/default/objects/AI_Callback_Context__c/AI_Callback_Context__c.object-meta.xml
<CustomObject>
    <description>Stores context information for webhook callbacks from AI providers</description>
    <label>AI Callback Context</label>
    <nameField>
        <displayFormat>CB-{0000000}</displayFormat>
        <label>Callback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Callback Contexts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>