RouteLogic-v4.0.0/force-app/main/default/objects/AI_Callback_Context__c/fields/Callback_Id__c.field-meta.xml
<CustomField>
    <fullName>Callback_Id__c</fullName>
    <description>Unique identifier for webhook callback</description>
    <externalId>true</externalId>
    <label>Callback ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>