RouteLogic-v4.0.0/force-app/main/default/objects/AI_Callback_Context__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Case record</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AI Callback Contexts</relationshipLabel>
    <relationshipName>AI_Callback_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>