RouteLogic-v4.0.0/force-app/main/default/objects/AI_Callback_Context__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date when callback context was created</description>
    <label>Created Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>