RouteLogic-v4.0.0/force-app/main/default/objects/AI_Callback_Context__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>AI Provider name</description>
    <label>Provider</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>