RouteLogic-v4.0.0/force-app/main/default/objects/AI_Callback_Context__c/fields/Request_Data__c.field-meta.xml
<CustomField>
    <fullName>Request_Data__c</fullName>
    <description>Original request data sent to AI provider</description>
    <label>Request Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>